k8s/php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-apache
  template:
    metadata:
      labels:
        app: php-apache
    spec:
      containers:
        - name: php-container
          image: shubham554/ayur-app-v1:latest  # Make sure this image is in a registry accessible by Kubernetes
          ports:
            - containerPort: 8000



---
apiVersion: v1
kind: Service
metadata:
  name: php-service
spec:
  selector:
    app: php-apache
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      nodePort: 31000
  type: NodePort
